crates/biome_js_parser/tests/js_test_suite/error/import_type_error.ts
type A = typeof import("a.json",{});
type B = typeof import("a.json",{with:{[a]:"1"}});
type C = typeof import("a.json",{with:{}}, 1);
type D = import("a",);
type E = import;
type F = typeof import;
